Add version for controllers
