# src/routes.ts
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import swaggerUi from 'swagger-ui-express';
 import apiSpec from '../openapi.json';
 
-import * as BookController from './controllers/book';
+import v1 from './v1';
 import config from './config/config';
 
 const swaggerUiOptions = {
@@ -11,10 +11,8 @@ const swaggerUiOptions = {
 
 const router = Router();
 
-// Book routes
-router.post('/book/add', BookController.add);
-router.get('/book/all', BookController.all);
-router.get('/book/search', BookController.search);
+// V1 routes
+router.use('/v1', v1);
 
 // Dev routes
 if (config.isDevelopment) {
